bug fixes: - search bar now is in it's own flex box - not an absolutely positioned thing. - the search bar doesn't jump in size on typing into it (did before based on height disparity between single-snippet css and what not.

--- a/sass/_Single-Snippet.scss
+++ b/sass/_Single-Snippet.scss
@@ -1,28 +1,23 @@
 .single-snippet {
   display: flex;
   align-items: center;
-  height: 15vh;
+  height: 13vh;
   border-bottom: 1px solid black;
-
 
 }
 
 .single-snippet-content {
-
   margin-left: 5%;
 
   h2 {
     font-size: 12px;
     font-weight: 400;
-
   }
 
   p {
-
     line-height: 0;
     font-size: 10px;
     color: #7B7E82;
     overflow: visible;
   }
-
 }
